--- a/App/app/src/main/res/values/colors.xml
+++ b/App/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name ="splash_screen_background">#352f44</color>
+    <color name="logo_white">#dbd8e3</color>
+    <color name="logo_blue">#5c5470</color>
 </resources>
