--- a/App/app/src/main/res/layout/activity_welcome.xml
+++ b/App/app/src/main/res/layout/activity_welcome.xml
@@ -58,6 +58,19 @@
                 android:layout_marginLeft="10dp"
                 android:onClick="redirectToRegistrationScreen"/>
 
+            <Button
+                android:id="@+id/test"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="MainScreen"
+                android:fontFamily="@font/muli"
+                android:background="@color/logo_blue"
+                android:textColor="@color/logo_white"
+                android:layout_weight="1"
+                android:layout_marginLeft="10dp"
+                android:onClick="redirectToMainScreen"/>
+
+
 
         </LinearLayout>
 
