--- a/App/app/src/main/res/values/colors.xml
+++ b/App/app/src/main/res/values/colors.xml
@@ -10,4 +10,7 @@
     <color name ="splash_screen_background">#352f44</color>
     <color name="logo_white">#dbd8e3</color>
     <color name="logo_blue">#5c5470</color>
+    <color name="colorPrimary">#0f9d58</color>
+    <color name="colorPrimaryDark">#006d2d</color>
+    <color name="colorAccent">#55cf86</color>
 </resources>
