--- a/App/app/src/main/res/layout/activity_registration.xml
+++ b/App/app/src/main/res/layout/activity_registration.xml
@@ -34,7 +34,7 @@
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Full Name"
+                android:hint="First Name"
                 android:textColorHint="@color/logo_white"
                 app:boxStrokeColor="@color/logo_white"
                 app:boxStrokeWidthFocused="2dp"
@@ -45,6 +45,7 @@
                 app:startIconTint="@color/logo_white">
 
                 <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/register_input_first_name"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:inputType="text"
@@ -57,75 +58,25 @@
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Email"
+                android:hint="Last Name"
                 android:textColorHint="@color/logo_white"
                 app:boxStrokeColor="@color/logo_white"
                 app:boxStrokeWidthFocused="2dp"
                 app:endIconMode="clear_text"
                 app:endIconTint="@color/logo_white"
                 app:hintTextColor="@color/logo_white"
-                app:startIconDrawable="@drawable/email"
+                app:startIconDrawable="@drawable/write"
                 app:startIconTint="@color/logo_white">
 
                 <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/register_input_last_name"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:inputType="textEmailAddress"
+                    android:inputType="text"
                     android:fontFamily="@font/muli"
                     android:textColor="@color/logo_white"/>
 
             </com.google.android.material.textfield.TextInputLayout>
-
-            <com.google.android.material.textfield.TextInputLayout
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="Password"
-                app:boxStrokeColor="@color/logo_white"
-                app:boxStrokeWidthFocused="2dp"
-                app:endIconMode="password_toggle"
-                app:endIconTint="@color/logo_white"
-                app:hintTextColor="@color/logo_white"
-                app:passwordToggleEnabled="true"
-                app:passwordToggleTint="@color/logo_white"
-                app:startIconDrawable="@drawable/password"
-                app:startIconTint="@color/logo_white"
-                android:textColorHint="@color/logo_white">
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="@font/muli"
-                    android:inputType="textPassword"
-                    android:textColor="@color/logo_white" />
-
-            </com.google.android.material.textfield.TextInputLayout>
-
-            <com.google.android.material.textfield.TextInputLayout
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="Confirm Password"
-                app:boxStrokeColor="@color/logo_white"
-                app:boxStrokeWidthFocused="2dp"
-                app:endIconMode="password_toggle"
-                app:endIconTint="@color/logo_white"
-                app:hintTextColor="@color/logo_white"
-                app:passwordToggleEnabled="true"
-                app:passwordToggleTint="@color/logo_white"
-                app:startIconDrawable="@drawable/password"
-                app:startIconTint="@color/logo_white"
-                android:textColorHint="@color/logo_white">
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="@font/muli"
-                    android:inputType="textPassword"
-                    android:textColor="@color/logo_white" />
-
-            </com.google.android.material.textfield.TextInputLayout>
-
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -137,6 +88,7 @@
                 android:textColor="@color/logo_white"/>
 
             <RadioGroup
+                android:id="@+id/register_gender"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:orientation="horizontal"
@@ -172,10 +124,90 @@
                     android:textColor="@color/logo_white"/>
             </RadioGroup>
 
+            <com.google.android.material.textfield.TextInputLayout
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Username"
+                android:textColorHint="@color/logo_white"
+                app:boxStrokeColor="@color/logo_white"
+                app:boxStrokeWidthFocused="2dp"
+                app:endIconMode="clear_text"
+                app:endIconTint="@color/logo_white"
+                app:hintTextColor="@color/logo_white"
+                app:startIconDrawable="@drawable/user"
+                app:startIconTint="@color/logo_white">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/register_username"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:inputType="textAutoComplete"
+                    android:fontFamily="@font/muli"
+                    android:textColor="@color/logo_white"/>
+
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Password"
+                app:boxStrokeColor="@color/logo_white"
+                app:boxStrokeWidthFocused="2dp"
+                app:endIconMode="password_toggle"
+                app:endIconTint="@color/logo_white"
+                app:hintTextColor="@color/logo_white"
+                app:passwordToggleEnabled="true"
+                app:passwordToggleTint="@color/logo_white"
+                app:startIconDrawable="@drawable/password"
+                app:startIconTint="@color/logo_white"
+                android:textColorHint="@color/logo_white">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/register_password"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/muli"
+                    android:inputType="textPassword"
+                    android:textColor="@color/logo_white" />
+
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Confirm Password"
+                app:boxStrokeColor="@color/logo_white"
+                app:boxStrokeWidthFocused="2dp"
+                app:endIconMode="password_toggle"
+                app:endIconTint="@color/logo_white"
+                app:hintTextColor="@color/logo_white"
+                app:passwordToggleEnabled="true"
+                app:passwordToggleTint="@color/logo_white"
+                app:startIconDrawable="@drawable/password"
+                app:startIconTint="@color/logo_white"
+                android:textColorHint="@color/logo_white">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/register_confirm_password"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/muli"
+                    android:inputType="textPassword"
+                    android:textColor="@color/logo_white" />
+
+            </com.google.android.material.textfield.TextInputLayout>
+
+
+
 
         </LinearLayout>
 
         <Button
+            android:id="@+id/registerUserButton"
+            android:onClick="userRegistrationSubmitButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
