--- a/App/app/src/main/res/layout/activity_add_clothes.xml
+++ b/App/app/src/main/res/layout/activity_add_clothes.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:layout_gravity="center_horizontal">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".AddClothesActivity"
+    android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -21,38 +21,32 @@
             android:textAllCaps="false"
             android:textColor="@color/black"
             android:textSize="40sp"
-            android:layout_weight="1"
             android:layout_width="wrap_content" />
 
         <ImageButton
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:layout_gravity="center"
-            android:layout_marginTop="40dp"
-            android:layout_weight="1"
+            android:layout_marginTop="50dp"
             android:src="@drawable/camera"
-            android:onClick="onLaunchCamera"
+            android:onClick="openOptions"
             android:background="@color/white"/>
+
 
         <ImageButton
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:layout_gravity="center"
-            android:layout_marginTop="40dp"
-            android:layout_weight="1"
-            android:src="@drawable/gallery"
-            android:background="@color/white"/>
-
-        <ImageButton
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_gravity="center"
-            android:layout_marginTop="40dp"
-            android:layout_weight="1"
+            android:layout_marginTop="50dp"
             android:src="@drawable/scanner"
             android:background="@color/white" />
 
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
 
     </LinearLayout>
 
-</ScrollView>
+</LinearLayout>
+
