--- a/App/app/src/main/res/values/themes.xml
+++ b/App/app/src/main/res/values/themes.xml
@@ -5,6 +5,11 @@
         <item name="colorPrimary">@color/splash_screen_background</item>
     </style>
 
+    <style name="Theme.Start" parent="Theme.MaterialComponents.Light.NoActionBar">
+        <!-- Customize your theme here. -->
+        <item name="colorPrimary">@color/splash_screen_background</item>
+    </style>
+
     <style name="SplashTheme" parent="Theme.AppCompat.NoActionBar">
         <item name="android:windowBackground">@drawable/splash_screen</item>
     </style>
