--- a/App/app/src/main/res/layout/activity_dashboard.xml
+++ b/App/app/src/main/res/layout/activity_dashboard.xml
@@ -49,6 +49,7 @@
         android:textAllCaps="false"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:onClick="openRecommendActivities"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/text_button2"
         app:layout_constraintHorizontal_bias="0.5"
@@ -65,6 +66,7 @@
         android:textAllCaps="false"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:onClick="openRecommendTravel"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
