--- a/App/app/src/main/res/layout/activity_my_wardrobe.xml
+++ b/App/app/src/main/res/layout/activity_my_wardrobe.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".MyWardrobeActivity">
 
-    <androidx.recyclerview.widget.RecyclerView
+    <ListView
         android:id="@+id/recycler_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
