Fixed the barcode

--- a/App/app/src/main/res/layout/activity_add_clothes.xml
+++ b/App/app/src/main/res/layout/activity_add_clothes.xml
@@ -34,13 +34,13 @@
 
 
         <ImageButton
+            android:id="@+id/imgbtn"
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:layout_gravity="center"
             android:layout_marginTop="50dp"
             android:src="@drawable/scanner"
-            android:background="@color/white"
-            android:onClick="barcodeView"/>
+            android:background="@color/white"/>
 
         <ProgressBar
             android:paddingTop="30dp"
